--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "dom"
     ],
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
